--- a/655/css/type-6.css
+++ b/655/css/type-6.css
@@ -1,46 +1,37 @@
-.type-6 .mid-title {
-  text-align: center;
-  width: auto;
+.type-6 a {
+  text-decoration: none;
+}
+.type-6 .box_mid .mid-title {
   position: relative;
   border-bottom: 1px solid #e5e5e5;
 }
-.type-6 .mid-title .titleL {
-  width: 100%;
+.type-6 .box_mid .mid-title .titleL {
   text-align: center;
-  font-size: 40px;
-  line-height: 50px;
-  font-family: 'RobotoRegular';
+  font-family: 'Roboto Regular', arial;
   text-transform: uppercase;
   color: #000000;
-  padding-bottom: 10px;
 }
-.type-6 .mid-title .titleL h1 {
+.type-6 .box_mid .mid-title .titleL h1 {
   font-size: 40px;
   line-height: 50px;
-  font-family: 'RobotoRegular';
+  font-family: 'Roboto Regular', arial;
+  font-weight: normal;
 }
-.type-6 .mid-title:after {
+.type-6 .box_mid .mid-title:after {
   position: absolute;
   width: 300px;
   height: 1px;
-  left: 50%;
-  bottom: -1px;
+  left: 40%;
   content: "";
   background-color: #01b360;
-  -webkit-transform: translate(-50%,-50%);
-  -moz-transform: translate(-50%,-50%);
-  -o-transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
-  transform: translate(-50%,0%);
 }
 .type-6 .menu-category {
   width: auto;
-  margin: 0px -40% 20px -40%;
-  padding: 0px 40%;
   border-bottom: 1px solid #e5e5e5;
 }
 .type-6 .menu-category ul {
-  width: 100%;
+  margin: 0 0 -4px 0;
+  padding: 0;
   text-align: center;
 }
 .type-6 .menu-category ul li {
@@ -48,8 +39,18 @@
   font-size: 16px;
   line-height: 24px;
   color: #333333;
-  font-family: 'RobotoRegular';
+  font-family: 'Roboto Regular', arial;
   margin: 0 2px;
+}
+.type-6 .menu-category ul li .current a {
+  background-color: #00af5a;
+  color: #ffffff;
+  font-family: 'Roboto Bold', arial;
+}
+.type-6 .menu-category ul li a {
+  color: #333333;
+  display: block;
+  padding: 13px 20px;
 }
 .type-6 .menu-category ul li .hovers_effect {
   position: relative;
@@ -58,49 +59,15 @@
 .type-6 .menu-category ul li .hovers_effect .hovers_text {
   position: relative;
   z-index: 2;
-  -ms-transition: color .2s ease-in 0s;
-  -webkit-transition: color .2s ease-in 0s;
-  transition: color .2s ease-in 0s;
 }
-.type-6 .menu-category ul li .hovers_effect:before {
-  top: 50%;
-}
-.type-6 .menu-category ul li .hovers_effect:after {
-  bottom: 50%;
-}
-.type-6 .menu-category ul li .hovers_effect:before,
-.type-6 .menu-category ul li .hovers_effect:after {
-  content: "";
-  display: inline-block;
+.type-6 .menu-category ul li:hover {
   background-color: #00af5a;
-  opacity: 0;
-  width: 100%;
-  height: 0;
-  position: absolute;
-  left: 0;
 }
-.type-6 .menu-category ul li a {
-  color: #333333;
-  display: block;
-  padding: 13px 20px;
-}
-.type-6 .menu-category ul li:hover .hovers_effect:before,
-.type-6 .menu-category ul li:hover .hovers_effect:after {
-  height: 100%;
-  opacity: 1;
-  -ms-transition-property: height, opacity;
-  -webkit-transition-property: height, opacity;
-  transition-property: height, opacity;
-  -ms-transition-duration: .6s;
-  -webkit-transition-duration: .6s;
-  transition-duration: .6s;
-  -ms-transition-timing-function: ease-out;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-  -ms-transition-delay: 0s;
-  -webkit-transition-delay: 0s;
-  transition-delay: 0s;
-}
-.type-6 .menu-category ul li:hover .hovers_text {
+.type-6 .menu-category ul li:hover .hovers_effect .hovers_text {
   color: #fff;
+}
+.type-6 .menu-category ul .active {
+  color: white;
+  background-color: #00af5a;
+  font-weight: bold;
 }
