--- a/641/css/641.css
+++ b/641/css/641.css
@@ -28,9 +28,49 @@
 }
 .mod-custom-1 .swiper-container {
   width: 700px;
+  height: 400px;
 }
 .mod-custom-1 .swiper-slide {
   text-align: center;
-  font-size: 18px;
-  background: #fff;
+  background: #96BD42;
+  color: white;
+}
+.mod-custom-1 .swiper-slide p {
+  text-transform: uppercase;
+  margin: 0px 100px;
+}
+.mod-custom-1 .swiper-slide h2 {
+  font-weight: bold;
+}
+@media (max-width: 768px) {
+  .mod-custom-1 .swiper-container {
+    width: 500px;
+    height: 400px;
+  }
+  .mod-custom-1 .swiper-button-prev {
+    left: 190px;
+  }
+  .mod-custom-1 .swiper-button-next {
+    right: 170px;
+  }
+  .mod-custom-1 .swiper-slide p {
+    margin: 0px 80px;
+  }
+}
+@media (max-width: 489px) {
+  .mod-custom-1 .swiper-container {
+    width: 460px;
+    height: 400px;
+  }
+  .mod-custom-1 .swiper-button-prev {
+    left: 170px;
+    top: 340px;
+  }
+  .mod-custom-1 .swiper-button-next {
+    right: 148px;
+    top: 340px;
+  }
+  .mod-custom-1 .swiper-slide p {
+    margin: 0px 80px;
+  }
 }
