--- a/641/less/641.less
+++ b/641/less/641.less
@@ -28,10 +28,56 @@
     }
     .swiper-container {
         width: 700px;
+        height: 400px;
     }
     .swiper-slide {
         text-align: center;
-        font-size: 18px;
-        background: #fff;
+        background: #96BD42;
+        color: white;
+        p{
+            text-transform: uppercase;
+            margin: 0px 100px;
+        }
+        h2{
+            font-weight: bold;
+        }
+    }
+    @media (max-width: 768px){
+        .swiper-container {
+            width: 500px;
+            height: 400px;
+        }
+        .swiper-button-prev {
+            left: 190px;
+
+        }
+        .swiper-button-next{
+            right: 170px;
+        }
+        .swiper-slide {
+            p{
+                margin: 0px 80px;
+            }
+        }
+    }
+    @media (max-width: 489px){
+        .swiper-container {
+            width: 460px;
+            height: 400px;
+        }
+        .swiper-button-prev {
+            left: 170px;
+            top: 340px;
+
+        }
+        .swiper-button-next{
+            right: 148px;
+            top: 340px; 
+        }
+        .swiper-slide {
+            p{
+                margin: 0px 80px;
+            }
+        }
     }
 }
