--- a/1908/css/1908.css
+++ b/1908/css/1908.css
@@ -3,9 +3,10 @@
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
   line-height: inherit;
-  margin: 0;
-  padding: 0;
   background: #fff;
+}
+.type-1908 input {
+  width: 54%;
 }
 .type-1908 .sidebar-shop {
   box-sizing: border-box;
@@ -36,6 +37,10 @@
   padding-left: 20px;
   background: url("../images/un-check.jpg") no-repeat left center;
 }
+.type-1908 .sidebar-shop .widget ul li a:hover {
+  color: #fe9c00;
+  text-decoration: none;
+}
 .type-1908 .sidebar-shop .widget .widget-title {
   cursor: pointer;
   font-size: 16px;
@@ -46,17 +51,13 @@
   padding: 0;
   border-bottom: 0;
 }
-.type-1908 .sidebar-shop .widget .widget-title::after {
-  width: 13px;
-  content: "";
-  height: 13px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  background: url("../images/sub.png") no-repeat center center;
-}
-.type-1908 .sidebar-shop .widget .widget-title:active::after {
-  background: url("../images/grid/add.png") no-repeat center center;
+.type-1908 .sidebar-shop .widget .widget-title i {
+  float: right;
+  color: gray;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 14px;
+  line-height: 1px;
+  text-transform: lowercase;
 }
 .type-1908 .sidebar-shop .box-filter {
   border-bottom: 1px solid #e8e8e8;
@@ -73,18 +74,13 @@
   padding: 0;
   margin: 15px 0;
 }
-.type-1908 .sidebar-shop .range-filter #amount {
-  display: inline-block;
-  margin-right: 4px;
-  vertical-align: top;
-}
 .type-1908 .sidebar-shop .range-filter #amount span {
   border: 1px solid #e8e8e8;
   display: inline-block;
   height: 30px;
   line-height: 30px;
   text-align: center;
-  width: 59px;
+  width: 20px;
 }
 .type-1908 .sidebar-shop .range-filter .btn-filter {
   background: #FE9C00 none repeat scroll 0 0;
@@ -94,12 +90,13 @@
   width: 72px;
 }
 .type-1908 .sidebar-shop .range-filter #slider-range {
-  background: #e8e8e8 none repeat scroll 0 0;
+  background: #fe9c00 none repeat scroll 0 0;
   border: medium none;
   height: 1px;
   margin: 30px 0;
+  cursor: pointer;
 }
-.type-1908 .sidebar-shop .range-filter #slider-range .ui-slider-handle.ui-state-default.ui-corner-all {
+.type-1908 .sidebar-shop .range-filter #slider-range .ui-slider-handle {
   background: #ff9900 none repeat scroll 0 0;
   border: medium none;
   border-radius: 0;
@@ -107,9 +104,7 @@
   margin: 0 -8px;
   top: -8px;
   width: 16px;
-}
-.type-1908 .sidebar-shop .range-filter #slider-range .ui-widget-header {
-  background: #ff9900 none repeat scroll 0 0;
+  cursor: pointer;
 }
 .type-1908 .sidebar-shop .list-color-filter {
   margin: 0 0 15px;
@@ -141,9 +136,6 @@
 .type-1908 .sidebar-shop .list-color-filter .color-blue {
   background-color: #107a8e !important;
 }
-.type-1908 .sidebar-shop .list-color-filter .color-yellow {
-  background-color: #f3d213 !important;
-}
 .type-1908 .sidebar-shop .list-color-filter .color-brown {
   background-color: #502006 !important;
 }
@@ -165,6 +157,9 @@
 .type-1908 .sidebar-shop .list-color-filter .color-red-blood {
   background-color: #bd0316 !important;
 }
+.type-1908 .sidebar-shop .list-color-filter .color-white {
+  background-color: #fff f !important;
+}
 .type-1908 .ui-slider {
   position: relative;
 }
@@ -172,16 +167,4 @@
   position: absolute;
   z-index: 2;
   cursor: default;
-  -ms-touch-action: none;
-  touch-action: none;
-}
-.type-1908 input,
-.type-1908 input:focus,
-.type-1908 input:hover {
-  outline: none;
-}
-@media (min-width: 992px) {
-  .type-1908 .col-md-3 {
-    width: 26%;
-  }
 }
