--- a/1918/css/1918.css
+++ b/1918/css/1918.css
@@ -107,7 +107,7 @@
 .type-1918 .last-item:after {
   display: none;
 }
-.type-1918 .vc_custom_1460436299968 {
+.type-1918 .vc_custom {
   margin-bottom: 0px;
 }
 .type-1918 p {
