--- a/1918/less/1918.less
+++ b/1918/less/1918.less
@@ -110,7 +110,7 @@
                 display: none;
             }
         }
-    .vc_custom_1460436299968 {
+    .vc_custom {
         margin-bottom: 0px;
     }
     p {
