--- a/1919/css/1919.css
+++ b/1919/css/1919.css
@@ -12,15 +12,16 @@
 .type-1919 .protect-video {
   margin-top: 95px;
 }
-.type-1919 .vc_custom_1460443871801 {
-  margin-bottom: 0px;
-}
 .type-1919 ul {
   padding: 0;
   list-style: none;
 }
 .type-1919 p {
   line-height: 24px;
+}
+.type-1919 img {
+  width: 364px;
+  height: 278px;
 }
 .type-1919 .about-full-protec h2 {
   font-size: 18px;
