--- a/1919/less/1919.less
+++ b/1919/less/1919.less
@@ -11,15 +11,16 @@
     .protect-video {
         margin-top: 95px;
     }
-    .vc_custom_1460443871801 {
-        margin-bottom: 0px;
-    }
     ul {
         padding: 0;
         list-style: none;
     }
     p {
         line-height: 24px;
+    }
+    img{
+        width: 364px;
+        height: 278px;
     }
     .about-full-protec {
         h2 {
