--- a/641/less/641.less
+++ b/641/less/641.less
@@ -2,6 +2,8 @@
     width: 100%;
     height: 600px;
     background-image: url(../images/5.jpg);
+    font-family: "Times New Roman", Times, serif;
+    cursor: pointer;
     .swiper-button-prev {
         background-color: #f6f7f3;
         border: 25px solid #ddd;
