--- a/1908/less/1908.less
+++ b/1908/less/1908.less
@@ -30,7 +30,7 @@
                     a{
                         color: #666;
                         padding-left:20px;
-                        background:url("../images/un-check.jpg") no-repeat left center;
+                        background:url("../images/uncheck.jpg") no-repeat left center;
                         &:hover{
                             color:#fe9c00;
                             text-decoration: none;
