--- a/1908/css/1908.css
+++ b/1908/css/1908.css
@@ -35,7 +35,7 @@
 .type-1908 .sidebar-shop .widget ul li a {
   color: #666;
   padding-left: 20px;
-  background: url("../images/un-check.jpg") no-repeat left center;
+  background: url("../images/uncheck.jpg") no-repeat left center;
 }
 .type-1908 .sidebar-shop .widget ul li a:hover {
   color: #fe9c00;
