--- a/1910/css/1910.css
+++ b/1910/css/1910.css
@@ -18,7 +18,9 @@
 }
 .type-1910 .home-title-wrapper .circle-info-wrapper {
   border: 1px solid #e8e8dd;
-  width: fit-content;
+}
+.type-1910 .home-title-wrapper .circle-info-wrapper figure.imghvr-push-up {
+  background-color: #fff;
 }
 .type-1910 .home-title-wrapper .circle-info-wrapper figure.imghvr-push-up figcaption.image-hover {
   background: none;
@@ -68,16 +70,16 @@
   padding: 10px;
 }
 .type-1910 .home-title-wrapper .circle-info-wrapper figure.imghvr-push-up figcaption.image-hover .bor_img .like .search .fa-heart:hover {
-  color: ;
+  color: green;
 }
 .type-1910 .home-title-wrapper .circle-info-wrapper figure.imghvr-push-up figcaption.image-hover .bor_img .like .search .fa-toggle-on:hover {
-  color: ;
+  color: green;
 }
 .type-1910 .home-title-wrapper .circle-info-wrapper figure.imghvr-push-up figcaption.image-hover .bor_img .like .search .fa-search:hover {
-  color: ;
+  color: green;
 }
 .type-1910 .home-title-wrapper .circle-info-wrapper figure.imghvr-push-up figcaption.image-hover .bor_img .like .cart i:hover {
-  color: ;
+  color: green;
 }
 .type-1910 .home-title-wrapper .circle-info-wrapper figure.imghvr-push-up figcaption.image-hover .bor_img img {
   border: 1px solid ;
