--- a/1919/css/1919.css
+++ b/1919/css/1919.css
@@ -7,7 +7,7 @@
   line-height: inherit;
   margin: 0;
   padding: 0;
-  background: #fff;
+  background: #FFFFFF;
 }
 .type-1919 .protect-video {
   margin-top: 95px;
@@ -60,7 +60,7 @@
   display: inline-block;
   background: #fe9c00 none repeat scroll 0 0;
   border-radius: 50%;
-  color: #fff;
+  color: #FFFFFF;
   font-size: 18px;
   height: 60px;
   line-height: 60px;
