--- a/1910/less/1910.less
+++ b/1910/less/1910.less
@@ -1,262 +1,263 @@
 .type-1910{
-	@color_wight:#fff;
-	@background_man:#fe9c00;
-	@background_page: #ff9933;
-	.home-title-wrapper{
-		.row{
-			margin: 0;
-			.view-shop{
-				float: right;
-			}
-			.view-sp{
-				padding-bottom: 25px;
-			}
-		}
-		.title_text{
-			margin: 20px 0 18px;
-			h2{
-				font-weight: 700;
-				margin: 0;
-				padding: 0 15px;
-				text-transform: uppercase;
-			}
-		}
-		.circle-info-wrapper{
-			border: 1px solid #e8e8dd;
-			width: fit-content;
-			figure.imghvr-push-up{
-				figcaption.image-hover{
-					background: none;
-					padding: 0px;
+    @color_wight:#fff;
+    @color_green: green;
+    @background_man:#fe9c00;
+    @background_page: #ff9933;
+    .home-title-wrapper{
+        .row{
+            margin: 0;
+            .view-shop{
+                float: right;
+            }
+            .view-sp{
+                padding-bottom: 25px;
+            }
+        }
+        .title_text{
+            margin: 20px 0 18px;
+            h2{
+                font-weight: 700;
+                margin: 0;
+                padding: 0 15px;
+                text-transform: uppercase;
+            }
+        }
+        .circle-info-wrapper{
+            border: 1px solid #e8e8dd;
+            figure.imghvr-push-up{
+                background-color: #fff;
+                figcaption.image-hover{
+                    background: none;
+                    padding: 0px;
 
-					.bor_img{
-						position:relativfe;
-						display:inline-block;
-						overflow: hidden;
+                    .bor_img{
+                        position:relativfe;
+                        display:inline-block;
+                        overflow: hidden;
 
-						.like{
-							text-align: center;
-							position: absolute;
-							bottom: 65px;
-							width: 100%;
-							.search{
-								color: @color_wight;
-								background: rgba(0, 0, 0, 0.3) none repeat scroll 0 0;
-								margin-top: -38px;
-								i.fa-heart:hover{
-									color: @background_man;
-									background: rgba(0, 0, 0, 0.5) none repeat scroll 0 0;
-								}
-								i.fa-toggle-on:hover{
-									color: @background_man;
-									background: rgba(0, 0, 0, 0.5) none repeat scroll 0 0;
-								}
-								i.fa-search:hover{
-									color: @background_man;
-									background: rgba(0, 0, 0, 0.5) none repeat scroll 0 0;
-								}
-								
-							}
-							.cart{
-								color: black;
-								font-size: 16px;
-								background: @background_man none repeat scroll 0 0;
-								color: #fff;
-								display: block;
-								padding: 8px 14px;
-								overflow: hidden;
-								i{
-									color: #fe9c00;
-								}
-							}
-						}
-						.like{
-							.search{
-								.fa{
-									padding:10px;
-								}
-								.fa-heart:hover{
-									color: @color_green;
-								}
-								.fa-toggle-on:hover{
-									color: @color_green;
-								}
-								.fa-search:hover{
-									color: @color_green;
-								}
-							}
-							.cart{
-								i:hover{
-									color: @color_green;
-								}
-							}
-						}
-						img{
-							border: 1px solid @color_border;
-							margin-top: 15px;
-						}
-						p{
-							text-decoration: line-through;
-						}
-						a{ 
-							color: black;
-							font-weight: bold;
-							font-size: 18px;
-						}
-					}
-				}
-			}
-			.product-info{
-				padding: 20px;
-				h3.title-product{
-					font-size: 14px;
-					font-weight: 700;
-					margin: 0 0 8px;
-					a{
-						color: #333;
-					}
-				}
-				.info-price{
-					span.Price-amount{
-						color: #ED321E;
-					}
-				}
-				.product-rating{
-					margin-top: 9px;
-					span.stars{
-						color: #999;
-						font-size: 12px;
-					}
-					span.value-s{
-						color: #999;
-						font-size: 12px;
-					}
-				}
-			}
-		}
+                        .like{
+                            text-align: center;
+                            position: absolute;
+                            bottom: 65px;
+                            width: 100%;
+                            .search{
+                                color: @color_wight;
+                                background: rgba(0, 0, 0, 0.3) none repeat scroll 0 0;
+                                margin-top: -38px;
+                                i.fa-heart:hover{
+                                    color: @background_man;
+                                    background: rgba(0, 0, 0, 0.5) none repeat scroll 0 0;
+                                }
+                                i.fa-toggle-on:hover{
+                                    color: @background_man;
+                                    background: rgba(0, 0, 0, 0.5) none repeat scroll 0 0;
+                                }
+                                i.fa-search:hover{
+                                    color: @background_man;
+                                    background: rgba(0, 0, 0, 0.5) none repeat scroll 0 0;
+                                }
 
-		.sort-pagi-bar{
-			
-			.product-order{
-				float: right;
-				form.woocommerce-ordering{
-					select.orderby{
-						height: 30px;
-						width: 163px;
-						border: 1px solid #e8e8e8;
-						position: relative;
-					}
-					span img.icon-img{
-						border: 1px solid #e8e8e8;
-						position: absolute;
-						top: 0px;
-						right: -10px;
-					}
-				}
-			}
-			.product-per-page{
-				select.orderby{
-					height: 30px;
-					width: 110px;
-					border: 1px solid #e8e8e8;
-				}
-			}
-			.product-pagi-nav{
-				float: right;
-				span.page-numbers-1{
-					background: #ff9933;
-					color: #fff;
-					border-left: 1px solid #e8e8e8;
-					display: inline-block;
-					font-size: 12px;
-					height: 28px;
-					line-height: 28px;
-					padding: 0 11px;
-					text-transform: uppercase;
-					vertical-align: top;
-				}
-				a.page-numbers-2{
-					border: 1px solid #e8e8e8;
-					color: #666;
-					display: inline-block;
-					font-size: 12px;
-					height: 28px;
-					line-height: 28px;
-					padding: 0 11px;
-					text-transform: uppercase;
-					vertical-align: top;
-				}
-				a.page-numbers-2:hover{
-					background:@background_page;
-					color: @color_wight;
-				}
-				span.page-numbers-dots{
-					font-weight: bold;
-					color: #666;
-				}
-				a.page-numbers-5{
-					border: 1px solid #e8e8e8;
-					color: #666;
-					display: inline-block;
-					font-size: 12px;
-					height: 28px;
-					line-height: 28px;
-					padding: 0 11px;
-					text-transform: uppercase;
-					vertical-align: top;
-				}
-				a.page-numbers-5:hover{
-					background:@background_page;
-					color: @color_wight;
-				}
-				a.page-numbers-6{
-					border: 1px solid #e8e8e8;
-					color: #666;
-					display: inline-block;
-					font-size: 12px;
-					height: 28px;
-					line-height: 28px;
-					padding: 0 11px;
-					text-transform: uppercase;
-					vertical-align: top;
-				}
-				a.page-numbers-6:hover{
-					background:@background_page;
-					color: @color_wight;
-				}
-				a.page-numbers-next i{
-					border: 1px solid #e8e8e8;
-					color: #666;
-					display: inline-block;
-					font-size: 18px;
-					height: 28px;
-					line-height: 28px;
-					padding: 0 11px;
-					text-transform: uppercase;
-					vertical-align: top;
-				}
-				a.page-numbers-next i:hover{
-					background:@background_page;
-					color: @color_wight;
-				}
-			}
-		}
-	}
+                            }
+                            .cart{
+                                color: black;
+                                font-size: 16px;
+                                background: @background_man none repeat scroll 0 0;
+                                color: #fff;
+                                display: block;
+                                padding: 8px 14px;
+                                overflow: hidden;
+                                i{
+                                    color: #fe9c00;
+                                }
+                            }
+                        }
+                        .like{
+                            .search{
+                                .fa{
+                                    padding:10px;
+                                }
+                                .fa-heart:hover{
+                                    color: @color_green;
+                                }
+                                .fa-toggle-on:hover{
+                                    color: @color_green;
+                                }
+                                .fa-search:hover{
+                                    color: @color_green;
+                                }
+                            }
+                            .cart{
+                                i:hover{
+                                    color: @color_green;
+                                }
+                            }
+                        }
+                        img{
+                            border: 1px solid @color_border;
+                            margin-top: 15px;
+                        }
+                        p{
+                            text-decoration: line-through;
+                        }
+                        a{ 
+                            color: black;
+                            font-weight: bold;
+                            font-size: 18px;
+                        }
+                    }
+                }
+            }
+            .product-info{
+                padding: 20px;
+                h3.title-product{
+                    font-size: 14px;
+                    font-weight: 700;
+                    margin: 0 0 8px;
+                    a{
+                        color: #333;
+                    }
+                }
+                .info-price{
+                    span.Price-amount{
+                        color: #ED321E;
+                    }
+                }
+                .product-rating{
+                    margin-top: 9px;
+                    span.stars{
+                        color: #999;
+                        font-size: 12px;
+                    }
+                    span.value-s{
+                        color: #999;
+                        font-size: 12px;
+                    }
+                }
+            }
+        }
+
+        .sort-pagi-bar{
+
+            .product-order{
+                float: right;
+                form.woocommerce-ordering{
+                    select.orderby{
+                        height: 30px;
+                        width: 163px;
+                        border: 1px solid #e8e8e8;
+                        position: relative;
+                    }
+                    span img.icon-img{
+                        border: 1px solid #e8e8e8;
+                        position: absolute;
+                        top: 0px;
+                        right: -10px;
+                    }
+                }
+            }
+            .product-per-page{
+                select.orderby{
+                    height: 30px;
+                    width: 110px;
+                    border: 1px solid #e8e8e8;
+                }
+            }
+            .product-pagi-nav{
+                float: right;
+                span.page-numbers-1{
+                    background: #ff9933;
+                    color: #fff;
+                    border-left: 1px solid #e8e8e8;
+                    display: inline-block;
+                    font-size: 12px;
+                    height: 28px;
+                    line-height: 28px;
+                    padding: 0 11px;
+                    text-transform: uppercase;
+                    vertical-align: top;
+                }
+                a.page-numbers-2{
+                    border: 1px solid #e8e8e8;
+                    color: #666;
+                    display: inline-block;
+                    font-size: 12px;
+                    height: 28px;
+                    line-height: 28px;
+                    padding: 0 11px;
+                    text-transform: uppercase;
+                    vertical-align: top;
+                }
+                a.page-numbers-2:hover{
+                    background:@background_page;
+                    color: @color_wight;
+                }
+                span.page-numbers-dots{
+                    font-weight: bold;
+                    color: #666;
+                }
+                a.page-numbers-5{
+                    border: 1px solid #e8e8e8;
+                    color: #666;
+                    display: inline-block;
+                    font-size: 12px;
+                    height: 28px;
+                    line-height: 28px;
+                    padding: 0 11px;
+                    text-transform: uppercase;
+                    vertical-align: top;
+                }
+                a.page-numbers-5:hover{
+                    background:@background_page;
+                    color: @color_wight;
+                }
+                a.page-numbers-6{
+                    border: 1px solid #e8e8e8;
+                    color: #666;
+                    display: inline-block;
+                    font-size: 12px;
+                    height: 28px;
+                    line-height: 28px;
+                    padding: 0 11px;
+                    text-transform: uppercase;
+                    vertical-align: top;
+                }
+                a.page-numbers-6:hover{
+                    background:@background_page;
+                    color: @color_wight;
+                }
+                a.page-numbers-next i{
+                    border: 1px solid #e8e8e8;
+                    color: #666;
+                    display: inline-block;
+                    font-size: 18px;
+                    height: 28px;
+                    line-height: 28px;
+                    padding: 0 11px;
+                    text-transform: uppercase;
+                    vertical-align: top;
+                }
+                a.page-numbers-next i:hover{
+                    background:@background_page;
+                    color: @color_wight;
+                }
+            }
+        }
+    }
 
 
-	@media (max-width:902px){
-		.sort-pagi-bar{
-			text-align: center;
-			width: 100%;
-			.product-pagi-nav{
-				display: inline-flex;
-				/*padding-top: 10px;*/
-			}
-		}
-	}
-	@media (max-width:568px){
-		.sort-pagi-bar{
-			padding-left: 50px;
-		}
-	}
+    @media (max-width:902px){
+        .sort-pagi-bar{
+            text-align: center;
+            width: 100%;
+            .product-pagi-nav{
+                display: inline-flex;
+                /*padding-top: 10px;*/
+            }
+        }
+    }
+    @media (max-width:568px){
+        .sort-pagi-bar{
+            padding-left: 50px;
+        }
+    }
 }
