update final module

--- a/1908/less/1908.less
+++ b/1908/less/1908.less
@@ -174,4 +174,11 @@
             cursor: default;
         }
     }
+    ul{
+        li{
+            a{
+                text-decoration: none;
+            }
+        }
+    }
 }
