--- a/1909/css/1909.css
+++ b/1909/css/1909.css
@@ -1,6 +1,54 @@
-.type-1909 a.shop-now {
-  text-decoration: none;
+.type-1909 .swiper-container {
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.type-1909 .swiper-container .promotion {
+  left: 0;
+  margin-top: -50px;
+  padding-left: 50px;
+  position: absolute;
   text-transform: uppercase;
+  top: 50%;
+}
+.type-1909 .swiper-container .promotion h3 {
+  color: #666;
+  font-size: 18px;
+  font-weight: 700;
+  margin: 0;
+}
+.type-1909 .swiper-container .promotion h2,
+.type-1909 .swiper-container .promotion span {
+  color: #ED321E;
+  font-weight: 700;
+  margin: 0;
+}
+.type-1909 .swiper-container .button {
+  float: left;
+  border: 0;
+  margin-top: 0px;
+  padding: 5px 20px;
+  background-color: #6b6;
+}
+.type-1909 .swiper-container .button span {
+  color: #fff;
+  cursor: pointer;
+  transition: 0.5s;
+  font-weight: 600;
+}
+.type-1909 .swiper-container .button:hover {
+  background-color: #3e8e41;
+  opacity: 1;
+}
+.type-1909 .swiper-container .button:active {
+  background-color: #007aff;
+}
+.type-1909 .swiper-container .swiper-button-next,
+.type-1909 .swiper-container .swiper-button-prev {
+  top: 30%;
+}
+.type-1909 .swiper-container .button {
   background: #333 none repeat scroll 0 0;
   color: #fff;
   display: inline-block;
@@ -10,33 +58,34 @@
   margin: 15px 0 0;
   padding: 0 20px;
 }
-.type-1909 h3 {
-  text-transform: uppercase;
-  color: #666;
-  font-size: 20px;
-  font-weight: 700;
-  margin: 0;
+.type-1909 .swiper-container .list-shop-cat {
+  background: #fafafa none repeat scroll 0 0;
+  border: 1px solid #e8e8e8;
+  padding: 24px;
 }
-.type-1909 h2 {
-  text-transform: uppercase;
-  color: #ED321E;
-  font-weight: 700;
-  margin: 0;
-}
-.type-1909 ul {
+.type-1909 .swiper-container .list-shop-cat ul {
   list-style: none;
+  padding: 0;
 }
-.type-1909 li {
-  float: left;
+.type-1909 .swiper-container .list-shop-cat ul li {
+  display: inline-block;
+  margin: 5px;
 }
-.type-1909 li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 16px;
+.type-1909 .swiper-container .list-shop-cat ul li a {
   text-decoration: none;
+  border: 1px solid #e8e8e8;
+  border-radius: 36px;
+  color: #666;
+  display: block;
+  height: 36px;
+  line-height: 36px;
+  padding: 0 39px 0 12px;
+  position: relative;
+  background: #fff;
+  -webkit-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
 }
-.type-1909 span {
+.type-1909 .swiper-container .list-shop-cat ul li a span {
   border-radius: 50%;
   width: 26px;
   height: 26px;
@@ -47,135 +96,98 @@
   top: 4px;
   right: 4px;
   background: #fe9c00;
+  -webkit-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
+  color: #fff;
 }
-.type-1909 span:hover {
-  color: #ED321E;
-}
-.type-1909 .list-shop-cat a:hover {
-  color: #ED321E;
-}
-.type-1909 .list-shop-cat a {
-  border: 1px solid #ECECEC;
-  border-radius: 36px;
-  color: #666;
-  height: 36px;
-  line-height: 15px;
-  padding: 9px 39px 0 12px;
-  position: relative;
+.type-1909 .swiper-slide {
+  font-size: 18px;
   background: #fff;
-}
-.type-1909 .list-shop-cat {
-  border: 1px solid #e8e8e8;
-  padding: 50px;
-}
-.type-1909 .header .tieudethink {
-  height: 25px;
-}
-.type-1909 .header .tieudethink strong {
-  color: ;
-  font-size: 11px;
-  text-transform: uppercase;
-}
-.type-1909 .shop-slider-info {
-  position: absolute;
-  margin-left: 47px;
-  top: 40%;
-  z-index: 10;
-}
-.type-1909 .sectionTitle {
-  border-bottom: 2px solid ;
-  width: 140px;
-  margin-bottom: -2px;
-  margin-left: -15px;
-}
-.type-1909 .view {
-  margin-right: -15px;
-}
-.type-1909 .view a {
-  font-size: 12px;
-  color: #6B6B6B;
-  float: right;
-  text-decoration: none;
-  margin-top: 25px;
-}
-.type-1909 .view a:hover {
-  text-decoration: none;
-  color: #ED321E;
-}
-.type-1909 .swiper-button-next,
-.type-1909 .swiper-button-prev {
-  position: absolute;
-  top: 50%;
-  width: 27px;
-  height: 31px;
-  margin-top: -24px;
-  z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
   cursor: pointer;
-  background-size: 27px 44px;
-  background-position: center;
-  background-repeat: no-repeat;
 }
-.type-1909 .slides .title h2 {
-  font-weight: bold;
-  font-size: 26px;
+@media only screen and (min-width: 320px) and (max-width: 479px) {
+  .type-1909 .promotion h3 {
+    font-size: 14px !important;
+  }
+  .type-1909 .promotion h2 {
+    font-size: 16px !important;
+  }
+  .type-1909 .promotion span {
+    font-size: 10px !important;
+  }
+  .type-1909 .promotion .button {
+    font-size: 12px !important;
+  }
+  .type-1909 .swiper-button-next {
+    top: 13% !important;
+  }
+  .type-1909 .swiper-button-prev {
+    top: 13% !important;
+  }
+  .type-1909 .list-shop-cat ul li {
+    display: block !important;
+  }
 }
-.type-1909 .slides .jssorb01 {
-  position: absolute;
-  bottom: 16px;
-  right: 16px;
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  .type-1909 .promotion h3 {
+    font-size: 22px;
+  }
+  .type-1909 .promotion h2 {
+    font-size: 24px;
+  }
+  .type-1909 .promotion span {
+    font-size: 14px;
+  }
+  .type-1909 .button {
+    margin-left: 35px;
+    font-size: 14px;
+  }
 }
-.type-1909 .slides .jssorb01 div {
-  position: absolute;
-  width: 8px;
-  height: 8px;
-  filter: alpha(opacity=70);
-  opacity: .9;
-  overflow: hidden;
-  cursor: pointer;
-  border: #000000 1px solid;
-  border-radius: 8px;
-  background-color: gray;
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .type-1909 .promotion h3 {
+    font-size: 26px;
+  }
+  .type-1909 .promotion h2 {
+    font-size: 28px;
+  }
+  .type-1909 .promotion h2 span {
+    font-size: 18px;
+  }
+  .type-1909 .button {
+    margin-left: 45px;
+    margin-top: 5px;
+  }
+  .type-1909 .button span {
+    font-size: 16px;
+  }
 }
-.type-1909 .slides .jssorb01 div:hover,
-.type-1909 .slides .jssorb01 .jssorb01 .av:hover {
-  background-color: #d3d3d3;
-}
-.type-1909 .slides .jssorb01 .av {
-  background-color: #fff;
-}
-.type-1909 .slides .jssorb01 .dn,
-.type-1909 .slides .jssorb01 .jssorb01 .dn:hover {
-  background-color: #555555;
-}
-.type-1909 .slides .slide-images {
-  position: relative;
-  margin: 0 auto;
-  top: 0px;
-  left: 0px;
-  width: 600px;
-  height: 300px;
-  overflow: hidden;
-  visibility: hidden;
-}
-.type-1909 .slides .slide {
-  cursor: default;
-  position: relative;
-  top: 0px;
-  left: 0px;
-  width: 600px;
-  height: 300px;
-  overflow: hidden;
-}
-@media screen and (min-width: 478px) {
-  .type-1909 .list-shop-cat a {
-    top: -33px;
-    border: 1px solid #ECECEC;
-    border-radius: 36px;
-    color: #666;
-    height: 36px;
-    line-height: 15px;
-    padding: 9px 39px 0 12px;
-    position: relative;
-    background: #fff;
+@media only screen and (min-width: 992px) {
+  .type-1909 h3 {
+    font-size: 30px;
+  }
+  .type-1909 h2 {
+    font-size: 32px;
+  }
+  .type-1909 h2 span {
+    font-size: 20px;
+  }
+  .type-1909 .button {
+    margin-left: 60px;
+    margin-top: 10px;
+  }
+  .type-1909 .button span {
+    font-size: 20px;
   }
 }
