--- a/1909/less/1909.less
+++ b/1909/less/1909.less
@@ -1,191 +1,237 @@
 
-.type-1909{
-    @color: #ED321E;
-    
-    a.shop-now {
-        text-decoration: none;
-        text-transform: uppercase;
-        background: #333 none repeat scroll 0 0;
-        color: #fff;
-        display: inline-block;
-        font-weight: 700;
-        height: 40px;
-        line-height: 40px;
-        margin: 15px 0 0;
-        padding: 0 20px;
-    }
-    h3 {
-        text-transform: uppercase;
-        color: #666;
-        font-size: 20px;
-        font-weight: 700;
-        margin: 0;
-    }
-    h2 {
-        text-transform: uppercase;
-        color: @color;
-        font-weight: 700;
-        margin: 0;
-    }
-    ul {
-        list-style: none;
-        }
-    li {
-float: left;
-}
+.type-1909 {  
 
-li a {
-display: block;
-color: white;
-text-align: center;
-padding: 16px;
-text-decoration: none;
-}
+    .swiper-container {
+        width: 100%;
+        height: 100%;
+        margin-left: auto;
+        margin-right: auto;
 
-
-    span {
-        border-radius: 50%;
-        width: 26px;
-        height: 26px;
-        display: block;
-        position: absolute;
-        text-align: center;
-        line-height: 26px;
-        top: 4px;
-        right: 4px;
-        background: #fe9c00;
-    }
-    span:hover{
-        color:@color;
-    }
-    .list-shop-cat a:hover {
-        color: @color;
-    }
-    .list-shop-cat a {
-        border: 1px solid #ECECEC;
-        border-radius: 36px;
-        color: #666;
-        height: 36px;
-        line-height: 15px;
-        padding: 9px 39px 0 12px;
-        position: relative;
-        background: #fff;
-    }
-    .list-shop-cat {
-        border: 1px solid #e8e8e8;
-        padding: 50px;
-    }
-    
-    .header{
-        
-        .tieudethink {
-            height: 25px;
-            strong {
-                color: @color-black;
-                font-size: 11px;
-                text-transform: uppercase;
-            }
-        }
-    }
-    .shop-slider-info {
-        position: absolute;
-        margin-left: 47px;
-        top: 40%;
-        z-index: 10;
-    }
-    .sectionTitle{
-        border-bottom: 2px solid @color-black;
-        width: 140px;
-        margin-bottom: -2px;
-        margin-left: -15px;
-    }
-
-    .view {
-        margin-right: -15px;
-        a {
-            font-size: 12px;
-            color: #6B6B6B;
-            float: right;
-            text-decoration: none;
-            margin-top: 25px;
-        }
-        a:hover {
-            text-decoration: none;
-            color:@color;
-        }
-    }
-
-    .swiper-button-next, .swiper-button-prev {
-        position: absolute;
-        top: 50%;
-        width: 27px;
-        height: 31px;
-        margin-top: -24px;
-        z-index: 10;
-        cursor: pointer;
-        background-size: 27px 44px;
-        background-position: center;
-        background-repeat: no-repeat;
-    }
-
-    .slides{
-        .title h2{
-            font-weight: bold;
-            font-size: 26px;
-        }
-        .jssorb01 {
+        .promotion{    
+            left: 0;
+            margin-top: -50px;
+            padding-left: 50px;
             position: absolute;
-            bottom:16px;
-            right:16px;
-            div{
-                position: absolute;
-                width: 8px;
-                height: 8px;
-                filter: alpha(opacity=70);
-                opacity: .9;
-                overflow: hidden;
-                cursor: pointer;
-                border: #000000 1px solid;
-                border-radius: 8px;
-                background-color: gray;
+            text-transform: uppercase;
+            top: 50%;
+            text-transform: uppercase;
+
+            h3{
+                color: #666;
+                font-size: 18px;
+                font-weight: 700;
+                margin: 0;
             }
-            div:hover, .jssorb01 .av:hover { background-color: #d3d3d3; }
-            .av { background-color: #fff; }
-            .dn, .jssorb01 .dn:hover { background-color: #555555; }
-        }
-        .slide-images{
-            position:relative;
-            margin:0 auto;
-            top:0px;
-            left:0px;
-            width:600px;
-            height:300px;
-            overflow:hidden;
-            visibility:hidden;
-        }
-        .slide{
-            cursor:default;
-            position:relative;
-            top:0px;
-            left:0px;
-            width:600px;
-            height:300px;
-            overflow:hidden;
-        }
-        
-    }
-    @media screen and (min-width:478px){
-        .list-shop-cat a {
-            top: -33px;
-            border: 1px solid #ECECEC;
-            border-radius: 36px;
-            color: #666;
-            height: 36px;
-            line-height: 15px;
-            padding: 9px 39px 0 12px;
-            position: relative;
-            background: #fff;
+
+            h2, span{
+                color: #ED321E;
+                font-weight: 700;
+                margin: 0;
+            }
         }
 
+        .button{
+            float: left;
+            border: 0;
+            margin-top: 0px;
+            padding: 5px 20px;
+            background-color: #6b6;
+
+            span {
+                color: #fff;
+                cursor: pointer;
+                transition: 0.5s;
+                font-weight: 600;
+            }
+        }
+        .button:hover {
+            background-color: #3e8e41;
+            opacity: 1;
+        }
+
+        .button:active {
+            background-color: #007aff;
+        }
+
+        .swiper-button-next, .swiper-button-prev{
+            top: 30%;
+        }
+
+        .button{
+            background: #333 none repeat scroll 0 0;
+            color: #fff;
+            display: inline-block;
+            font-weight: 700;
+            height: 40px;
+            line-height: 40px;
+            margin: 15px 0 0;
+            padding: 0 20px;
+        }
+
+
+        .list-shop-cat{
+            background: #fafafa none repeat scroll 0 0;
+            border: 1px solid #e8e8e8;
+            padding: 24px;
+
+            ul{
+                list-style: none;
+                padding: 0;
+
+                li{
+                    display: inline-block;
+                    margin: 5px;
+
+                    a{
+                        text-decoration:none;
+                        border: 1px solid #e8e8e8;
+                        border-radius: 36px;
+                        color: #666;
+                        display: block;
+                        height: 36px;
+                        line-height: 36px;
+                        padding: 0 39px 0 12px;
+                        position: relative;
+                        background: #fff;
+                        -webkit-transition: all 0.3s ease-out 0s;
+                        transition: all 0.3s ease-out 0s;
+
+                        span{
+                            border-radius: 50%;
+                            width: 26px;
+                            height: 26px;
+                            display: block;
+                            position: absolute;
+                            text-align: center;
+                            line-height: 26px;
+                            top: 4px;
+                            right: 4px;
+                            background: #fe9c00;
+                            -webkit-transition: all 0.3s ease-out 0s;
+                            transition: all 0.3s ease-out 0s;
+                            color: #fff;
+                        }
+                    }
+                }
+            }
+        }
+
+    }
+    .swiper-slide {
+        font-size: 18px;
+        background: #fff;
+        /* Center slide text vertically */
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    @media only screen and (min-width: 320px) and (max-width: 479px){  
+        .promotion{
+            h3{
+                font-size: 14px !important;
+            }
+            h2{
+                font-size: 16px!important;
+            }
+            span{
+                font-size: 10px!important;
+            }
+
+            .button{
+                font-size: 12px!important;
+            }
+        }
+        .swiper-button-next{
+            top: 13%!important;
+        }
+        .swiper-button-prev {
+            top: 13%!important;
+        }
+
+        .list-shop-cat{
+            ul{
+                li {
+                    display: block!important;
+                }
+            }
+        }
+
+    }
+
+    @media only screen and (min-width: 480px) and (max-width: 767px){  
+        .promotion{
+            h3{
+                font-size: 22px;
+            }
+            h2{
+                font-size: 24px;
+            }
+            span{
+                font-size: 14px;
+            }
+        }
+
+        .button{
+            margin-left: 35px;
+            font-size: 14px;
+        }
+    }
+
+    @media only screen and (min-width: 768px) and (max-width: 991px){  
+        .promotion{
+            h3{
+                font-size: 26px;
+            }
+            h2{
+                font-size: 28px;
+
+                span{
+                    font-size: 18px;
+                }
+            }
+        }
+
+        .button{
+            margin-left: 45px;
+            margin-top: 5px;
+            span{
+                font-size: 16px;
+            }
+        }
+    }
+
+    @media only screen and (min-width: 992px){  
+        h3{
+            font-size: 30px;
+        }
+        h2{
+            font-size: 32px;
+
+            span{
+                font-size: 20px;
+            }
+        }
+
+        .button{
+            margin-left: 60px;
+            margin-top: 10px;
+            span{
+                font-size: 20px;
+            }
+        }
+    }
+
+    @media only screen and (min-width: 1200px){ 
     }
 }
