--- a/655/less/655.less
+++ b/655/less/655.less
@@ -20,14 +20,6 @@
             }
 
         }
-        .mid-title:after{
-            position: absolute;
-            width: 300px;
-            height: 1px;
-            left: 40%;
-            content:"";
-            background-color:#01b360;
-        }
     }
     .menu-category{
         width: auto;
@@ -74,6 +66,22 @@
                 color: white;
                 background-color:#00af5a;
                 font-weight: bold;
+            }
+        }
+    }
+    @media (max-width: 768px){
+        .box_mid{
+            .mid-title{
+                .titleL h1 {
+                    font-size: 29px;
+                }
+            }
+        }
+        .menu-category{
+            ul{
+                li {
+                    display: inline-block;
+                    font-size: 14px;}
             }
         }
     }
