--- a/641/less/641.less
+++ b/641/less/641.less
@@ -5,25 +5,21 @@
     font-family: "Times New Roman", Times, serif;
     cursor: pointer;
     .swiper-button-prev {
-        background-color: #f6f7f3;
-        border: 25px solid #ddd;
-        color: #96bd42;
+        color: #fff;
         background-image: none;
         padding-bottom: 18px;
         padding-right: 8px;
-        top: 335px;
-        left: 288px;
+        top: 215px;
+        left: 15px;
 
     }
     .swiper-button-next{
-        background-color: #f6f7f3;
-        border: 25px solid #ddd;
-        color: #96bd42;
+        color: #fff;
         background-image: none;
         padding-bottom: 18px;
         padding-right: 8px;
-        top: 335px;
-        right: 288px;
+        top: 215px;
+        right: 15px;
     }
     .swiper-wrapper{
         margin-top: 70px;
@@ -44,17 +40,20 @@
             font-weight: bold;
         }
     }
+    .textv{
+        margin-left: -15px;
+    }
     @media (max-width: 768px){
         .swiper-container {
             width: 500px;
             height: 400px;
         }
         .swiper-button-prev {
-            left: 190px;
+            left: 20px;
 
         }
         .swiper-button-next{
-            right: 170px;
+            right: 20px;
         }
         .swiper-slide {
             p{
