--- a/1908/less/1908.less
+++ b/1908/less/1908.less
@@ -9,7 +9,7 @@
     font-size: @font-size14;
     line-height: inherit;
     background:@color4;
-    input{
+    .vlput{
         width: 54%;
     }
     .sidebar-shop{
@@ -35,7 +35,6 @@
                     a{
                         color: @color2;
                         padding-left:20px;
-                        background:url("../images/uncheck.jpg") no-repeat left center;
                         &:hover{
                             color:@color3;
                             text-decoration: none;
