--- a/1908/css/1908.css
+++ b/1908/css/1908.css
@@ -5,7 +5,7 @@
   line-height: inherit;
   background: #FFFFFF;
 }
-.type-1908 input {
+.type-1908 .vlput {
   width: 54%;
 }
 .type-1908 .sidebar-shop {
@@ -35,7 +35,6 @@
 .type-1908 .sidebar-shop .widget ul li a {
   color: #666;
   padding-left: 20px;
-  background: url("../images/uncheck.jpg") no-repeat left center;
 }
 .type-1908 .sidebar-shop .widget ul li a:hover {
   color: #fe9c00;
